/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    `maven-publish`
    id("com.github.johnrengelman.shadow") version "8.1.1"
    `jacoco`
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    api("org.freemarker:freemarker:2.3.19")
    api("org.apache.logging.log4j:log4j-core:2.17.2")
    api("jgraph:jgraph:5.13.0.0")
    api("org.databene:databene-benerator:0.5.9-SR1")
    api("org.databene:databene-commons:0.4.9-SR1")
    api("org.databene:databene-webdecs:0.4.9-SR1")
    api("org.swinglabs:swing-layout:1.0.3")
    api("commons-logging:commons-logging:1.1.1")
    api("mysql:mysql-connector-java:8.0.30")
    api("org.perf4j:perf4j:0.9.16")
    api("org.testng:testng:7.7.1")
}

group = "com.brc"
version = "1.0.2-SNAPSHOT"
description = "white-mercury-dg"
java.sourceCompatibility = JavaVersion.VERSION_17

jacoco {
    toolVersion = "0.8.9"
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/tspauld98/white-mercury-dg")
            credentials {
                username = project.findProperty("gpr.user") as String? ?: System.getenv("GITHUB_USERNAME")
                password = project.findProperty("gpr.key") as String? ?: System.getenv("GITHUB_PUB_ACCESS_TOKEN")
            }
        }
    }
    publications {
        register<MavenPublication>("gpr") {
            from(components["java"])
        }
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}

tasks.named<Test>("test") {
    useTestNG()
    jvmArgs("-Djava.awt.headless=true")
    finalizedBy(tasks.jacocoTestReport)
}

tasks.shadowJar {
    archiveClassifier.set("shaded")
    manifest {
        attributes["Created-By"] = "Gradle ${gradle.gradleVersion}"
        attributes["Main-Class"] = "com.brc.whitemercurydg.WhiteMercuryDGMain"
    }   
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required.set(true)
    }
}

tasks {
    build {
        dependsOn("shadowJar")
    }
}
